# rola

./: CMakeLists.txt  README.md
atm/: CMakeLists.txt  atm_busi.hpp  atm_main.cpp  bank_machine.hpp  interface_machine.hpp  messages.hpp
base/: CMakeLists.txt  any_assert.hpp  any_assert_main.cpp  assignable.hpp  assignable_main.cpp  multi_include.cpp  pimpl_base.hpp  pimpl_base_main.cpp  singlable.hpp  singlable_main.cpp  zval.hpp
csp/: CMakeLists.txt  dispatcher.hpp  message.hpp  message_main.cpp  receiver.hpp  sender.hpp
csp2/: CMakeLists.txt  actor_hub.hpp  csp2.cpp  dispatcher.hpp  message.hpp  receiver.hpp  sender.hpp
drop/: CMakeLists.txt  SFINAE.cpp  SFINAE.h  auto_parall.cpp  callable.h  callable_main.cpp  char_traits.hpp  char_traits_main.cpp  class.h  compile_time.h  container_demo.h  cpp17.h  debug_template.h  for_range.h  forward.h  header.h  inherience.h  iterator_demo.h  lambdas.h  lambdas_main.cpp  memory.cpp  monads.cpp  preprocessor.cpp  promise.cpp  template.h  thread.h  tuple_main.cpp  user_literals.h  variant_main.cpp
drop/trick/: CMakeLists.txt  CRTP.hpp  mixin.hpp  (+7 more)
easy_actor/: CMakeLists.txt  base.h  block_queue.hpp  condition.hpp  error_handle.hpp  spin_lock.hpp  thread_pool.hpp
easy_async/: CMakeLists.txt  easy_async.hpp  easy_async_main.cpp  parallel_algo_main.cpp  task_main.cpp
easy_bus/: CMakeLists.txt  app_base.hpp  easy_bus_app1.cpp  easy_bus_app2.cpp  message.hpp  message_box.hpp  message_demo.hpp  message_dispatcher.hpp  message_main.cpp  serialize.hpp  serialize_main.cpp
easy_eloop/: CMakeLists.txt  event_listener.hpp  event_loop.hpp
easy_log/: CMakeLists.txt  basic_logger.hpp  basic_logger_main.cpp  compose_logger.hpp  compose_logger_main.cpp  easy_log_qt.hpp  gcc_compose_logger.hpp  log_channel.hpp  log_channel_main.cpp  log_filter.hpp  log_filter_main.cpp  log_formatter.hpp  log_formatter_main.cpp  log_item.hpp  log_item_main.cpp  log_level.hpp  log_level_main.cpp
easy_mq/: CMakeLists.txt  message.hpp  queue.hpp
easy_pipo/: CMakeLists.txt  inbox.hpp  inbox_hub.hpp  inbox_hub_main.cpp  inbox_main.cpp
easy_signal/: CMakeLists.txt  easy_signal.hpp  easy_signal_main.cpp  signal_hub.hpp  signal_hub_main.cpp
easy_socket/: CMakeLists.txt  acceptor.hpp  acceptor_main.cpp  connector.hpp  datagram_socket.hpp  datagram_socket_main.cpp  exception.hpp  ftp_client.hpp  ftp_client_main.cpp  inet6_address.hpp  inet_address.hpp  inet_address_main.cpp  platform.h  sock_address.hpp  socket.hpp  socket_main.cpp  stream_socket.hpp  stream_socket_main.cpp  tcp6_acceptor.h  tcp6_socket.h  tcp_acceptor.h  tcp_connector.h  tcp_socket.h  tcp_socket_main.cpp  udp6_socket.h  udp_socket.h  udp_socket_main.cpp  unix_acceptor.hpp  unix_address.hpp  unix_connector.h  unix_dgram_socket.h  unix_stream_socket.h
easy_socket2/: CMakeLists.txt  broadcast_recv.hpp  broadcast_recv_main.cpp  broadcast_send.hpp  broadcast_send_main.cpp  connected_socket.hpp  easy_socket2_main.cpp  file_server_protocol.hpp  file_server_protocol_main.cpp  heart_beater.hpp  heart_beater_main.cpp  multicast_recv.hpp  multicast_recv_main.cpp  multicast_send.hpp  multicast_send_main.cpp  platform2.h  socket2.hpp  socket_exception.hpp  socket_init.hpp  stream_parser.hpp  stream_parser_main.cpp  tcp_client.hpp  tcp_connect.hpp  tcp_connect_main.cpp  tcp_file_client.hpp  tcp_file_client_main.cpp  tcp_file_server.hpp  tcp_file_server_main.cpp  tcp_server.hpp  udp_client.hpp  udp_server.hpp  unconnected_socket.hpp
gsl/: CMakeLists.txt  assert.hpp  assert_main.cpp  byte.hpp  byte_main.cpp  pointers.hpp  pointers_main.cpp  span.hpp  span_ext.hpp  span_ext_main.cpp  span_main.cpp  string_span.hpp  util.hpp  util_main.cpp
jsnader/: CMakeLists.txt  etcp.hpp  heartbeat.h  heartbeat_client.cpp  heartbeat_server.cpp  peercrash_client.cpp  peercrash_server.cpp  skel.h  tcpclient_skel.cpp  tcpclient_vrec.cpp  tcpserver_skel.cpp  tcpserver_vrec.cpp  udpclient_perf.cpp  udpclient_skel.cpp  udpserver_perf.cpp  udpserver_skel.cpp  wincompat.c
lingex/: CMakeLists.txt  array.hpp  array_main.cpp  concatenation.hpp  concatenation_main.cpp  conditionable.hpp  curried.hpp  curried_main.cpp  fluentx.hpp  fluentx_main.cpp  functionic.hpp  functionic_main.cpp  inheritance.hpp  inheritance_man.cpp  loopable.hpp  named_type.hpp  presuffix.hpp  presuffix_main.cpp
mpl/: CMakeLists.txt  any_value.hpp  any_value_main.cpp  easy_bind.hpp  easy_bind_main.cpp  function.hpp  function_main.cpp  tuple.hpp  tuple2.hpp  tuple_main.cpp  type_list.hpp  type_list_main.cpp  value_list.hpp  value_list_main.cpp  variant.hpp
optimize/: CMakeLists.txt  lazy_val.hpp  lazy_val_main.cpp
safecpp/: CMakeLists.txt  scpp_array.hpp  scpp_array_main.cpp  scpp_assert.hpp  scpp_assert_main.cpp  scpp_matrix.hpp  scpp_matrix_main.cpp  scpp_ptr.hpp  scpp_vector.hpp  scpp_vector_main.cpp
stlex/: CMakeLists.txt  algorithm.hpp  algorithm_main.cpp  bit_vector.hpp  bit_vector_main.cpp  chrono_ex.hpp  chrono_ex_main.cpp  container.hpp  container_main.cpp  easy_range.hpp  filex.hpp  filex_main.cpp  interruptible_thread.hpp  interruptible_thread_main.cpp  localtime_utils.hpp  parallel.hpp  parallel_main.cpp  rx_range.hpp  rx_range_main.cpp  string.hpp  thread.hpp  thread_main.cpp  thread_pool.hpp  thread_safe_list.hpp  thread_safe_lookup_table.hpp  thread_safe_loopup_table.hpp  thread_safe_queue.hpp  thread_safe_stack.hpp  trie.hpp  trie_main.cpp
tlpi/: 1_fileio_copy.cpp  1_fileio_temp.cpp  2_proc_env_disp.cpp  2_proc_env_modify.cpp  2_proc_pidmax.cpp  3_datetime_cpu.cpp  3_datetime_disp.cpp  4_posix_sysconf.cpp  5_signal_handler.cpp  CMakeLists.txt  ename.c.inc  error_functions.hpp  get_num.hpp  platform.h  tlpi.h  tlpi_hdr.h
utils/: CMakeLists.txt  byte_order.hpp  byte_order_main.cpp  duplix.hpp  easy_ini.hpp  easy_ini_main.cpp  guid.hpp  guid_main.cpp  hash_val.hpp  json11.hpp  json11_main.cpp  local_time.hpp  ntp_client.hpp  ntp_client_main.cpp  path.hpp  path_main.cpp  predicator.hpp  resolver.hpp  serialize.hpp  serialize2.hpp  serialize_main.cpp  spin_lock.hpp  stack_tracer.hpp  stack_tracer_main.cpp  tinyxml2.hpp  tinyxml2_main.cpp
(+29 files in other folders)
